--- a/rel/index.html
+++ b/rel/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <h1>The Evolution-Game</h1>
-  <div id="sub_header">Simulation of a game I like. Source Code on <a href="https://github.com/bubens/evolution.elm">Github.com</a>.</div>
+  <div id="sub_header">Simulation of a game I like. Source Code on <a href="https://github.com/bubens/Evolution.elm.git">Github.com</a>.</div>
 <article>
   <div id="elm_goes_here"></div>
 </article>
